Update 01b - Operacje na danych i struktura zapytań SQL - ćwiczenia.ipynb

--- a/01b - Operacje na danych i struktura zapytań SQL - ćwiczenia.ipynb
+++ b/01b - Operacje na danych i struktura zapytań SQL - ćwiczenia.ipynb
@@ -882,7 +882,7 @@
     }
    },
    "source": [
-    "[`01c - Operacje na danych i struktura zapytań SQL - zadania.md`](https://github.com/pkociepka/sql/blob/master/exercises/01_simple_querries.md)"
+    "[`01c - Operacje na danych i struktura zapytań SQL - zadania.md`](https://github.com/miklesz/SQL/blob/master/01c%20-%20Operacje%20na%20danych%20i%20struktura%20zapytań%20SQL%20-%20zadania.md)"
    ]
   },
   {
