Update 02a - Zaawansowane operacje w SQL - stringi, daty, aliasy, joins i podzapytania.ipynb

--- a/02a - Zaawansowane operacje w SQL - stringi, daty, aliasy, joins i podzapytania.ipynb
+++ b/02a - Zaawansowane operacje w SQL - stringi, daty, aliasy, joins i podzapytania.ipynb
@@ -178,69 +178,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d492d2ed",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Unikalna lista autorów"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5acc902e",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### Ćwiczenie"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "26c85a78",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "Wyświetl bez powtórzeń imię i nazwisko oddzielone spacją `(' ')`."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4f062ed1",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### Rozwiązanie"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8c094fa6",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%%sql\n",
-    "SELECT DISTINCT Author_name || ' ' || Author_surname FROM simple_library;"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "7b9fdea7",
    "metadata": {
     "slideshow": {
@@ -284,7 +221,7 @@
    "source": [
     "> **Przykład:**\n",
     "> \n",
-    "> Wyświetl przy pomocy LOWER() wszystkie nazwiska małymi literami."
+    "> Wyświetl przy pomocy LOWER() wszystkie imiona małymi literami."
    ]
   },
   {
@@ -299,7 +236,7 @@
    "outputs": [],
    "source": [
     "%%sql\n",
-    "SELECT LOWER(Author_surname) FROM simple_library;"
+    "SELECT LOWER(Author_name) FROM simple_library;"
    ]
   },
   {
@@ -313,7 +250,7 @@
    "source": [
     "> **Przykład:**\n",
     "> \n",
-    "> Wyświetl przy pomocy UPPER() wszystkie imiona dużymi literami."
+    "> Wyświetl przy pomocy UPPER() wszystkie nazwiska dużymi literami."
    ]
   },
   {
@@ -328,70 +265,7 @@
    "outputs": [],
    "source": [
     "%%sql\n",
-    "SELECT UPPER(Author_name) FROM simple_library;"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8d007606",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Imię małymi, nazwisko wielkimi literami"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "734ac5eb",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### Ćwiczenie"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "06c0e56d",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "Wyświetl bez powtórzeń imię małymi literami i nazwisko dużymi literami."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3c1149f0",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### Rozwiązanie"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1f304e70",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%%sql\n",
-    "SELECT DISTINCT LOWER(author_name), UPPER(author_surname) FROM simple_library;"
+    "SELECT UPPER(Author_surname) FROM simple_library;"
    ]
   },
   {
@@ -661,69 +535,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7798c18e",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Wyszukiwanie książek dodanych na początku miesiąca"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4bb9a954",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "#### Ćwiczenie"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "575be6ca",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "Wybierz książki, których dzień dodania należy do przedziału od `01` do `10`."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f88e7ea3",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### Rozwiązanie"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a9caa008",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%%sql\n",
-    "SELECT * FROM simple_library WHERE STRFTIME('%d', Registration_date) BETWEEN '01' AND '10';"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "3cd5b422",
    "metadata": {
     "slideshow": {
@@ -832,71 +643,6 @@
    "source": [
     "%%sql\n",
     "SELECT JULIANDAY('now');"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "db7481d5",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Oblicz liczbę dni między dwiema ważnymi datami w historii Polski"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "08ec4c27",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### Ćwiczenie"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "038947a3",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "Oblicz liczbę dni, które upłynęły między **odzyskaniem niepodległości przez Polskę (11 listopada 1918)** a **wejściem Polski do Unii Europejskiej (1 maja 2004)**.\n",
-    "\n",
-    "**Podpowiedź:** Aby uzyskać liczbę dni, odejmij w zapytaniu wartość `JULIANDAY()` dla starszej daty od wartości `JULIANDAY()` dla nowszej daty."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "dee75717",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### Rozwiązanie"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a2eececa",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%%sql\n",
-    "SELECT JULIANDAY('2004-05-01') - JULIANDAY('1918-11-11');"
    ]
   },
   {
@@ -1131,134 +877,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec3f1770",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Wyszukiwanie książek konkretnego autora"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "32975db6",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### Ćwiczenie"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "23647e6e",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "Znajdź nazwisko i tytuły książek napisanych przez autora o identyfikatorze `'3'`."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "23ceaff3",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### Rozwiązanie"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9d1077a1",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%%sql\n",
-    "SELECT authors.Surname, titles.Title FROM authors JOIN titles ON authors.ID = titles.Author_ID\n",
-    "WHERE titles.Author_ID = '3';"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c0b2de8d",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Wyszukiwanie książek autorów o imieniu na literę `‘S’`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5024092a",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### Ćwiczenie"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9e906df3",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "Znajdź imiona, nazwiska i tytuły książek napisanych przez autorów o imieniu rozpoczynającym się na `'S'`."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "795697f8",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### Rozwiązanie"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2208e608",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%%sql\n",
-    "SELECT authors.Name, authors.Surname, titles.Title FROM authors JOIN titles\n",
-    "ON authors.ID = titles.Author_ID WHERE authors.Name LIKE 'S%';"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "87b28538",
    "metadata": {
     "slideshow": {
@@ -1295,13 +913,14 @@
    "id": "4af03cf1",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     }
    },
    "outputs": [],
    "source": [
     "%%sql\n",
-    "SELECT t.ID, a.Surname, t.Title FROM authors AS a, titles AS t ON a.ID = t.Author_ID WHERE a.ID = '1';"
+    "SELECT t.ID, a.Surname, t.Title FROM authors AS a, titles AS t ON a.ID = t.Author_ID\n",
+    "WHERE a.ID = '1';"
    ]
   },
   {
@@ -1394,71 +1013,6 @@
     "%%sql\n",
     "SELECT ID, Name, Surname FROM authors WHERE ID = (\n",
     "    SELECT Author_ID FROM titles WHERE Title = 'Solaris'\n",
-    ");"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "71070c03",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Wyszukiwanie książek Lema za pomocą podzapytania"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ed61bd24",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### Ćwiczenie"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "babc9549",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "Wybierz przy pomocy podzapytania tytuły wszystkich książek Lema."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "83247ccf",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### Rozwiązanie"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "629a144b",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%%sql\n",
-    "SELECT Title FROM titles WHERE Author_ID IN (\n",
-    "    SELECT ID FROM authors WHERE Surname = 'Lem'\n",
     ");"
    ]
   },
@@ -1656,7 +1210,7 @@
    "id": "14489c34",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     }
    },
    "outputs": [],
@@ -1725,30 +1279,6 @@
     "HAVING Books_borrowed > (\n",
     "    SELECT COUNT(DISTINCT borrowings.ID) / count(DISTINCT borrowings.User_ID) FROM borrowings\n",
     ");"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "54b416b3",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Zadania utrwalające"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8a4c1ab7",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "[`02c - Zaawansowane operacje w SQL – stringi, daty, aliasy, joins i podzapytania - zadania.md`](https://github.com/miklesz/SQL/blob/master/02_joins.md)"
    ]
   },
   {
